Project refresh * Upgrade to new Homie v3 * Upgrade to new Weather Station library * Switch to OpenWeatherMap

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,10 @@ framework = arduino
 upload_speed = 115200
 monitor_speed = 115200
 board_build.f_cpu = 160000000L
-lib_deps = Homie
-           ESP8266_SSD1306
-           JsonStreamingParser
-           ESP8266 Weather Station
+upload_port = /dev/cu.SLAB_USBtoUART
+monitor_port = /dev/cu.SLAB_USBtoUART
+lib_deps = 
+	ESP8266_SSD1306
+	JsonStreamingParser
+	ESP8266 Weather Station
+	marvinroger/Homie@^3.0.1
